# daisy-clion-cmake-template

./: .gitignore  CMakeLists.txt  README.md
.run/: Debug Daisy (ST-Link).run.xml  Flash Daisy (USB).run.xml
conf/: daisy.cfg
src/: main.cpp
